# ChangeLog for media-libs/libpng
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libpng/ChangeLog,v 1.369 2012/06/16 15:58:39 ssuominen Exp $

*libpng-1.5.11 (16 Jun 2012)

  16 Jun 2012; Samuli Suominen <ssuominen@gentoo.org> +libpng-1.5.11.ebuild:
  Version bump.

  16 Jun 2012; Samuli Suominen <ssuominen@gentoo.org> -libpng-1.2.47.ebuild,
  -libpng-1.5.8.ebuild, -libpng-1.5.9.ebuild:
  old

  28 Apr 2012; Raúl Porcel <armin76@gentoo.org> libpng-1.5.10.ebuild:
  alpha/sparc stable wrt #410153

  26 Apr 2012; Alexis Ballier <aballier@gentoo.org> libpng-1.5.10.ebuild:
  keyword ~amd64-fbsd

  17 Apr 2012; Brent Baude <ranger@gentoo.org> libpng-1.5.10.ebuild:
  Marking libpng-1.5.10 ppc64 for bug 410153

  16 Apr 2012; Brent Baude <ranger@gentoo.org> libpng-1.5.10.ebuild:
  Marking libpng-1.5.10 ppc for bug 410153

  04 Apr 2012; Mike Frysinger <vapier@gentoo.org> libpng-1.2.49.ebuild,
  libpng-1.5.10.ebuild:
  Mark arm/ia64/s390/sh stable #410153.

  03 Apr 2012; Thomas Kahle <tomka@gentoo.org> libpng-1.2.49.ebuild,
  libpng-1.5.10.ebuild:
  marked x86 per bug 410153

  02 Apr 2012; Agostino Sarubbo <ago@gentoo.org> libpng-1.2.49.ebuild,
  libpng-1.5.10.ebuild:
  Stable for amd64, wrt bug #410153

  31 Mar 2012; Jeroen Roovers <jer@gentoo.org> libpng-1.5.10.ebuild:
  Stable for HPPA (bug #410153).

*libpng-1.5.10 (30 Mar 2012)
*libpng-1.2.49 (30 Mar 2012)

  30 Mar 2012; Samuli Suominen <ssuominen@gentoo.org> +libpng-1.2.49.ebuild,
  +libpng-1.5.10.ebuild:
  Version bump wrt #410153 by Thomas D.

  03 Mar 2012; Raúl Porcel <armin76@gentoo.org> libpng-1.5.9.ebuild:
  ia64/m68k/s390/sh/sparc stable wrt #404197

  03 Mar 2012; Markus Meier <maekke@gentoo.org> libpng-1.5.9.ebuild:
  arm stable, bug #404197

  02 Mar 2012; Samuli Suominen <ssuominen@gentoo.org> libpng-1.5.9.ebuild:
  ppc64 stable wrt #404197

  02 Mar 2012; Tobias Klausmann <klausman@gentoo.org> libpng-1.5.9.ebuild: