@@ -1,24 +1,28 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST libpng-1.2.49.tar.xz 538408 RMD160 75f27a3a8140767ce5a5cd3c4b77de48f376dc39 SHA1 0984ab46fbfa5a34ca8d98958eebe5fb52b22294 SHA256 6f5a313225ce8f0d36aceda25b837ad3cb97d0096a97fa23dbc6362f7781d014
-DIST libpng-1.5.10-apng.patch.gz 10127 RMD160 b44c3ee9560662f740b74773e8656c65c3a7c265 SHA1 89353426738f301cb5140c4323ee14480119ed57 SHA256 0464b2df97853c426f35f97d12800b4dcb5760fc4c787fc4987ae0fb870a997f
-DIST libpng-1.5.10.tar.xz 702752 RMD160 18875d71984f025e41bfa6bafadbe3ad0eb49eae SHA1 bfa655f04965545a54dc974e50c2325968ca5a71 SHA256 dd49c39710a6ef8a550923ba17d3496b08ce769e47122d9150df4763bf49605d
-DIST libpng-1.5.11-apng.patch.gz 10019 RMD160 09b0672a73a1cb285ae67401c83961636582e614 SHA1 f5533634a7b2ad1abfc0b99a678a90f283ce0ab2 SHA256 13c4153607dbf401378de4d0ba31bff044acffde176503b3dc1b90eed20281b8
-DIST libpng-1.5.11.tar.xz 705772 RMD160 749d686cf0c5ba59e56a967f452b47bc46eb306f SHA1 6a7eba0c6317f761380b822ff05bdcdeec769f76 SHA256 42d562714f0b6b8ead5b0aabfd8bca35e44993a572e0eae3e772cc180e59dda8
-EBUILD libpng-1.2.49.ebuild 852 RMD160 c90a63fa3dfcef7ead30565c1e379f8668ddbac3 SHA1 1080a850b1dc00f9d3778e0dd41121541dcda28b SHA256 6eec893f7f247d69e548bf7673849bc328905fc4f77a645d4d5c8cbb900373d3
-EBUILD libpng-1.5.10.ebuild 1571 RMD160 122cc0b010d230ab500abbb2085020954ed9be83 SHA1 9b4479c268af22538977aaeb916bafd7faa8d438 SHA256 2b2d313c996cdbd026fc016d91c38046f5c36a04ab2f76104b07814165acbe23
-EBUILD libpng-1.5.11.ebuild 1310 RMD160 71f4d3fe6cd088fc0474eda560bfcc0bf7251af3 SHA1 5dc45b07b11c7693450df878c42183029d4805bb SHA256 59c8229f0214adcff4c89e30611b7ec39321a625063565f7281bbec58c9e0ec9
-MISC ChangeLog 48466 RMD160 9beb7e2e363aca8148423405322f3c225381383a SHA1 187511d75e9a5dc38ee7f372824efcf088507c8c SHA256 cb0f21bfd5275ea6f5915a119112a0beb7c1d2f61d38cc07f66ff75b64d6a8c8
-MISC metadata.xml 247 RMD160 61ce1843d85a1ab05dc7838ac15375b0fb4f35bd SHA1 0a4b634f99126e9ebc485ad949b41df5a11f2fb0 SHA256 6646b71692ca41b7b944a2f6e044942baf8b8258ca073b555160e57b9eb39af8
+DIST libpng-1.2.49.tar.xz 538408 SHA256 6f5a313225ce8f0d36aceda25b837ad3cb97d0096a97fa23dbc6362f7781d014 SHA512 2035cfbb7c01300d105b6898f31643d77af2ee33226ddd07870761a9f8a388395829825ba97da3d152c118de4c4c7025dd98a24eb4ead3a90bd10b7159a8adee WHIRLPOOL 623e42525ab7d4eff855d609384fa9938cfa6d8eb3a92cc6e9bf79c79f698ad5cf5946760cc6843f43fde2461a631cf83e8a01fc7f35a123f3a3ab0cb17b80ad
+DIST libpng-1.2.50.tar.xz 539152 SHA256 4724f81f8c92ac7f360ad1fbf173396ea7c535923424db9fbaff07bfd9d8e8e7 SHA512 a6699d75722e359a90a959369abe612e6e73e76c7c80231d99546c94bb71e92bcda0bd6e157f124176d96341dca2f61e2394689449160745a85e8b4bbe66b227 WHIRLPOOL 90a42f1d209e75dbd14014c843d37f754119cb6b95a07f5195ee63ea18ba8022132f8aaa6e91accf142dc64c66fbb764794fc57f2544581d561b7efa2de05a1f
+DIST libpng-1.5.10-apng.patch.gz 10127 SHA256 0464b2df97853c426f35f97d12800b4dcb5760fc4c787fc4987ae0fb870a997f SHA512 44dab93316380b39012ecfbd10f6e3325eb530fadff71655e989eeefaa3b3d179417a9677f92a3838c7cfe9f2f299f412deeb7ec4552d76f1b505983efe009af WHIRLPOOL 31674bd4790073879c0daf5c425ae67d45fd8b24862caed1593cfa59503a52c884daa1247b0a7b301da354eb05123ca7ae36a0e9f17505e63e588a44edfe0b0c
+DIST libpng-1.5.10.tar.xz 702752 SHA256 dd49c39710a6ef8a550923ba17d3496b08ce769e47122d9150df4763bf49605d SHA512 367268e2fd25afa11357fe5766328af2b939722eb89102246e5ad3fcbc21a966798794bbff5f85070eff57e23da467cc779a1d12cd66172dcb501702d35b0847 WHIRLPOOL 1c66f9302356d4ed7e0b1524bd885e47a815f8fe38ceb6860e42ee12aa717de5543f8b892221f5f9170a9be612bc436e2a96cfbe3a7bc83a4006455035ecc0b7
+DIST libpng-1.5.11-apng.patch.gz 10019 SHA256 13c4153607dbf401378de4d0ba31bff044acffde176503b3dc1b90eed20281b8 SHA512 53c579c73a44a148406b1d5b104729b49af0b559e2af045d4550b619a04f8bfdfa51750f256512ceee2059c6d11d87bda3beeb41e00cdc18259ea32372373959 WHIRLPOOL a0489b0e2be0aa5535c39d3dee540dfa4a8c9b558baa7c344dd3062409fa3c1575b21a659367a8298be2a6efa271f0c151e20587de9d4c6e932074daf170691d
+DIST libpng-1.5.11.tar.xz 705772 SHA256 42d562714f0b6b8ead5b0aabfd8bca35e44993a572e0eae3e772cc180e59dda8 SHA512 b2d7dba02f801112248fb3c361b134b852820ea4704c86bfb178687d503779a887eeeff060f1b42a3df1c2f2df433f072eb0d0ff086a191bd55957e1b48cc9b6 WHIRLPOOL eb6d989d5c6fbba720ebedd5649817a5cea394a571f419fca43851fec18fcbf2d9d0820d1a17fb161fbf3cc2ecfc30e3b2beb4fb83b16373c0b811322cd65fda
+DIST libpng-1.5.12.tar.xz 706348 SHA256 badc68caf528b4bdf9aa0ab29a1cef90570d17c69bba766fd0a9d41c7d48d40d SHA512 cece22d9772d1f6e8cfe54f276c409f8e5c1dad6ee08422872fb4e510177c44046bdd00346cf6fcb5f9b0b7ca5c7d59a7f24461d5a0856b00358f37049de629a WHIRLPOOL 8ed0bb41d7de65b4100aaebc5d21441fc7619984f5bea9e00cd033c1d6863250eef47b155944a31b0d8e3f6896ca2dcf3458d4e027526d530510f5d39a000504
+EBUILD libpng-1.2.49.ebuild 852 SHA256 6eec893f7f247d69e548bf7673849bc328905fc4f77a645d4d5c8cbb900373d3 SHA512 62502e80cb635937e1591d9eba533cb1c210497fd63b6c14c44c07621fb3d3e08927cf069f956be6c57d1dc97981b43d48ff11d7ccc727254a76fc70427cf0c7 WHIRLPOOL 414de9e1a4ab04766d4c47051954e0ff42fa71fa26dc39e42a4b7f8307a9f9106a67850bbb960cc905cac677de5ffb6fc5c80b9e9521b334eaad71d6239c991b
+EBUILD libpng-1.2.50.ebuild 863 SHA256 182eaf51e6beb75f7496aa5484fbb5b323db28bd31492c4d3f4976993cfbc79b SHA512 509896a843d80de524bc4082f6fc7bd014a028c02d7810680c736c5ca65cc023957b0d0e09d0cfe4eb2f13ea302421218aa8150231566947d5145473f8cff0c1 WHIRLPOOL 8b83d8a32bf62505b9c0519f215ac022d5727e7fb3b8495021e7858d10c2bddfca99dfdadfeca885a313f30d0af2c6ea12efca78f0c142914631948678061a02
+EBUILD libpng-1.5.10.ebuild 1571 SHA256 2b2d313c996cdbd026fc016d91c38046f5c36a04ab2f76104b07814165acbe23 SHA512 90a78f85154fad4e2fae437ed2d9c3a9f72f5697e45c839e60d53231e25356f2af7817729db8c4fffdc994bac2ff4b82063e795880a9170fed60e07d269d24ee WHIRLPOOL 8902663cd973fba7010e30011342e5ac23be97e51e64c81dbab953bac0cd95faff9e71fc7fd54ff2ce2b36b80bbc47c6a84a25ba936f8f51fbdbcdb032ffe1b8
+EBUILD libpng-1.5.11.ebuild 1310 SHA256 59c8229f0214adcff4c89e30611b7ec39321a625063565f7281bbec58c9e0ec9 SHA512 ed082cf48a5d3a14e6036d4afaabdc3d7776631c9be0c596c0381b8118bfcf888ac72817730dbff32e6e178f3f1bc2a676769a116716ccc911be3abd1d83b41b WHIRLPOOL 2cf26f8a3fef79e77750493b7a8a515309098f86f2ab4e7c17226b31b990cc8fe524a89a1045ca32a1e94f37d75d20bcc53c3e20bb48f43a4abde71f2078ccf6
+EBUILD libpng-1.5.12.ebuild 1321 SHA256 cb072e926cee253d3ce9032bcb0a85b18558385ddea883159685534af84cd1e9 SHA512 4cf393b95cef70f17aee1d2fd63e970c5e95a77de58046aa34e85b12c3fcfadac56389e57c61779bd87e62270fd16698317f4a27cd2f38ef79c1947fa5b138b5 WHIRLPOOL c6d84e7ddbcfd7f972899d396b741effe6ba75ca6d7c0a910fd50504adc45148489f8c25264d470a27b1c7019797ed4d397ac695a1a348b7c8f56b8dee67e3e6
+MISC ChangeLog 48644 SHA256 45ebec4e862ac24f61a5418feaf73348694a99de6fbc478f19c02c491324b13d SHA512 9cf09d3d2d89cd9b3929205368e8fac79fc37c91767f4292a088dd3098c7f7ace25706b63ff51bde8c3d3b12543c0be34479b07a69c01b5b2a92592d2132c839 WHIRLPOOL af9bd9f30b11972df7c7243a07d8c311592865f22698c3bcca430fb24c49ffc0be822a6ca7d661bc9524c0046c8311a8a1035b5b12ac3cc36558636a8b6e9b0a
+MISC metadata.xml 247 SHA256 6646b71692ca41b7b944a2f6e044942baf8b8258ca073b555160e57b9eb39af8 SHA512 f87239088300fd36fad8c64309774ec33c6ee0d0b2c8a43b8bfdd4a53223c4e3ad8bfe31f8e7ccfc12af7ab81cf54d2440070e26ad2ddf774be0b40f9218f05f WHIRLPOOL fd606eed56c413ebfb17ef83fcd32540f0a871febeb21e7f17b77d687d6556f75103f0036a3be2ca0251071e5cfaf0ec9d71b1c2a8c087f68ea50f15bef87eba
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBAgAGBQJP3KwtAAoJEEdUh39IaPFNHBwIAJlF1Ki7TFRdqW3zPv3ctO8N
-t4t1KSK1YZS2r2I87Hda4NAIGb+HB+2+ydGYcKdfGOP/zBvV+yoZtQYYYhSj2P8q
-3JlcM0fCko3/b619aISaAcgqTLtz7q+don9/vy61plfl2auQayASbt2V6hT0dKrV
-FBrCovzDNFz5TvhpXz57mCj3FNDWMGlgSc4czr/vB+IE7U9vhYc0I9j2Z6kevz/u
-GFRH/V1pMkUBpkt4pkmCrgwG0PM6k2MSZAlp7dM6ukT8XMbL6YAUvQALJQUzSkOW
-psqmpElJmCkaqNWN3nym6d+f8D6ckce1RnCvFQhnikqvlprCv8smUkkH2U4x00g=
-=0LYI
+iQEcBAEBAgAGBQJQABbdAAoJEEdUh39IaPFNLXUH/0phHVFzsdXvWLLQCURgPcI5
+xMSrE8fcryyo+PIeM6dSZwsxZ1XoPn+WvQP3s40SK8Kk/b+h7NjptINGPPwHF9EU
+EG4xhGquLQFIg1Gvp1mXNjkrHXGJa+aJPfnPQ2gqKjuMVPpzTVZf2RGoMVtH1CCQ
+whtpRek8gR+OtBmx5krMq+ZTfQIiF9rpP3tMxmQVlIPX5jQZS7PvlhMQQvDiUScG
+b0CEqAdNDQNmiDHl9ye+ejmymDIWRn7FyCbUlFAwypSFXmHt7BRQ0Z5V+ym9tJ26
+RJD3ZovF3/LnI58S1f9VASwwA0Y90dtrnYqR71hju384HWj8XjpR9IGKV/08/2o=
+=4S3q
 -----END PGP SIGNATURE-----
