@@ -1,6 +1,13 @@
 # ChangeLog for media-libs/libpng
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libpng/ChangeLog,v 1.369 2012/06/16 15:58:39 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libpng/ChangeLog,v 1.370 2012/07/13 12:45:05 ssuominen Exp $
+
+*libpng-1.5.12 (13 Jul 2012)
+*libpng-1.2.50 (13 Jul 2012)
+
+  13 Jul 2012; Samuli Suominen <ssuominen@gentoo.org> +libpng-1.2.50.ebuild,
+  +libpng-1.5.12.ebuild:
+  Version bump.
 
 *libpng-1.5.11 (16 Jun 2012)
 
